==> MilleniumSAT/MilleniumSAT/Core/Src/mcp_can.c <==
#include "mcp_can.h"
#include "stm32l0xx_hal.h"
#include "rm3100_spi.h"

void mcp2515_reset(void)
{
	HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_RESET;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
    HAL_Delay(10);
}

uint8_t mcp2515_readRegister(const uint8_t address)
{
    uint8_t ret;
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_READ;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
	HAL_SPI_Transmit(spi_handle, &address, 1, HAL_MAX_DELAY);
	HAL_SPI_Receive(spi_handle, &ret, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);

    return ret;
}

void mcp2515_readRegisterS(const uint8_t address, uint8_t values[], const uint8_t n)
{
    uint8_t i;
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_READ;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &address, 1, HAL_MAX_DELAY);
    // mcp2515 has auto-increment of address-pointer
    for(i=0; i<n && i<CAN_MAX_CHAR_IN_MESSAGE; i++)
    {
    	HAL_SPI_Receive(spi_handle, &values[i], 1, HAL_MAX_DELAY);
    }
     HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
}

void mcp2515_setRegister(const uint8_t address, const uint8_t value)
{
	HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_WRITE;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &address, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &value, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
}

void mcp2515_setRegisterS(const uint8_t address, const uint8_t values[], const uint8_t n)
{
    uint8_t i;
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_WRITE;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &address, 1, HAL_MAX_DELAY);

    for(i=0; i<n; i++)
    {
        HAL_SPI_Transmit(spi_handle, &values[i], 1, HAL_MAX_DELAY);
    }

    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
}

void mcp2515_modifyRegister(const uint8_t address, const uint8_t mask, const uint8_t data)
{
	HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_BITMOD;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &address, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &mask, 1, HAL_MAX_DELAY);
    HAL_SPI_Transmit(spi_handle, &data, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
}

uint8_t mcp2515_readStatus(void)
{
    uint8_t i;
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
    uint8_t endereco = MCP_READ_STATUS;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_SPI_Receive(spi_handle, &i, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);

    return i;
}

uint8_t mcp2515_init(const uint8_t canSpeed)
{

    uint8_t res;

    mcp2515_reset();

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
#if DEBUG_EN
        Serial.print("Enter setting mode fall\r\n");
#else
        delay(10);
#endif
        return res;
    }
#if DEBUG_EN
    Serial.print("Enter setting mode success \r\n");
#else
    delay(10);
#endif

    // set boadrate
    if(mcp2515_configRate(canSpeed))
    {
#if DEBUG_EN
        Serial.print("set rate fall!!\r\n");
#else
        delay(10);
#endif
        return res;
    }
#if DEBUG_EN
    Serial.print("set rate success!!\r\n");
#else
    delay(10);
#endif

    if(res == MCP2515_OK) {

        // init canbuffers
        mcp2515_initCANBuffers();

        // interrupt mode
        mcp2515_setRegister(MCP_CANINTE, MCP_RX0IF | MCP_RX1IF);

#if (DEBUG_RXANY==1)
        // enable both receive-buffers to receive any message and enable rollover
        mcp2515_modifyRegister(MCP_RXB0CTRL,
        MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
        MCP_RXB_RX_ANY | MCP_RXB_BUKT_MASK);
        mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
        MCP_RXB_RX_ANY);
#else
        // enable both receive-buffers to receive messages with std. and ext. identifiers and enable rollover
        mcp2515_modifyRegister(MCP_RXB0CTRL,
        MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
        MCP_RXB_RX_STDEXT | MCP_RXB_BUKT_MASK);
        mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
        MCP_RXB_RX_STDEXT);
#endif
        // enter normal mode
        res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);
        if(res)
        {
#if DEBUG_EN
            Serial.print("Enter Normal Mode Fall!!\r\n");
#else
            delay(10);
#endif
            return res;
        }


#if DEBUG_EN
        Serial.print("Enter Normal Mode Success!!\r\n");
#else
        delay(10);
#endif

    }
    return res;

}

void mcp2515_write_canMsg(const uint8_t buffer_sidh_addr, int rtrBit)
{
    uint8_t mcp_addr;
    mcp_addr = buffer_sidh_addr;
    mcp2515_setRegisterS(mcp_addr+5, dta, dta_len);                  // write data uint8_ts
    // Serial.print("RTR: ");
    // Serial.println(rtrBit);
    if(rtrBit == 1)                                                   // if RTR set bit in uint8_t
    {
        dta_len |= MCP_RTR_MASK;
    }
    mcp2515_setRegister((mcp_addr+4), dta_len);                        // write the RTR and DLC
    mcp2515_write_id(mcp_addr, ext_flg, can_id);                     // write CAN id

}

void mcp2515_read_canMsg(const uint8_t buffer_sidh_addr)        // read can msg
{
    uint8_t mcp_addr, ctrl;

    mcp_addr = buffer_sidh_addr;
    mcp2515_read_id(mcp_addr, &ext_flg,&can_id);
    ctrl = mcp2515_readRegister(mcp_addr-1);
    dta_len = mcp2515_readRegister(mcp_addr+4);

    rtr = (ctrl & 0x08) ? 1 : 0;

    dta_len &= MCP_DLC_MASK;
    mcp2515_readRegisterS(mcp_addr+5, &(dta[0]), dta_len);
}

uint8_t begin(uint8_t speedset)
{
    HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
    uint8_t res = mcp2515_init(speedset);
    return ((res == MCP2515_OK) ? CAN_OK : CAN_FAILINIT);
}

uint8_t init_Mask(uint8_t num, uint8_t ext, unsigned long ulData)
{
    uint8_t res = MCP2515_OK;
#if DEBUG_EN
    Serial.print("Begin to set Mask!!\r\n");
#else
    delay(10);
#endif
    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0){
#if DEBUG_EN
        Serial.print("Enter setting mode fall\r\n");
#else
        delay(10);
#endif
        return res;
    }

    if(num == 0){
        mcp2515_write_id(MCP_RXM0SIDH, ext, ulData);

    }
    else if(num == 1){
        mcp2515_write_id(MCP_RXM1SIDH, ext, ulData);
    }
    else res =  MCP2515_FAIL;

    res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);
    if(res > 0){
#if DEBUG_EN
        Serial.print("Enter normal mode fall\r\n");
#else
        delay(10);
#endif
        return res;
    }
#if DEBUG_EN
    Serial.print("set Mask success!!\r\n");
#else
    delay(10);
#endif
    return res;
}

uint8_t init_Filt(uint8_t num, uint8_t ext, unsigned long ulData)
{
    uint8_t res = MCP2515_OK;
#if DEBUG_EN
    Serial.print("Begin to set Filter!!\r\n");
#else
    delay(10);
#endif
    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
#if DEBUG_EN
        Serial.print("Enter setting mode fall\r\n");
#else
        delay(10);
#endif
        return res;
    }

    switch(num)
    {
        case 0:
        mcp2515_write_id(MCP_RXF0SIDH, ext, ulData);
        break;

        case 1:
        mcp2515_write_id(MCP_RXF1SIDH, ext, ulData);
        break;

        case 2:
        mcp2515_write_id(MCP_RXF2SIDH, ext, ulData);
        break;

        case 3:
        mcp2515_write_id(MCP_RXF3SIDH, ext, ulData);
        break;

        case 4:
        mcp2515_write_id(MCP_RXF4SIDH, ext, ulData);
        break;

        case 5:
        mcp2515_write_id(MCP_RXF5SIDH, ext, ulData);
        break;

        default:
        res = MCP2515_FAIL;
    }

    res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);
    if(res > 0)
    {
#if DEBUG_EN
        Serial.print("Enter normal mode fall\r\nSet filter fail!!\r\n");
#else
        delay(10);
#endif
        return res;
    }
#if DEBUG_EN
    Serial.print("set Filter success!!\r\n");
#else
    delay(10);
#endif

    return res;
}

uint8_t clearMsg()
{
    can_id      = 0;
    dta_len     = 0;
    ext_flg     = 0;
    rtr         = 0;
    filhit      = 0;

    for(int i = 0; i<dta_len; i++)
    {
        dta[i] = 0x00;
    }

    return MCP2515_OK;
}

uint8_t readMsgBufID(unsigned long *ID, uint8_t *len, uint8_t buf[])
{
    uint8_t rc;
    rc = readMsg();

    if(rc == CAN_OK) {
        *len = dta_len;
        *ID  = can_id;
        for(int i = 0; i<dta_len && i < MAX_CHAR_IN_MESSAGE; i++)
        {
            buf[i] = dta[i];
        }
    } else {
        *len = 0;
    }
    return rc;
}
